--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "@vitejs/plugin-vue": "^5.2.3",
+    "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
   }
 }
